<resources>
    <string name="app_name">chatApplication</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="type_message">Type a message</string>
    <string name="send">Send</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="create_room">Create New Room</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="enter_room_description">Enter Room Description</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="create_account">Create account</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="don_t_have_account">Don\'t have account?</string>
</resources>